--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">TfLiteImageClassification</string>
+    <string name="app_name">DigiApp</string>
     <string name="description_info">Info</string>
     <string name="request_permission">This sample needs camera permission.</string>
     <string name="camera_error">This device doesn\'t support Camera2 API.</string>
@@ -9,6 +9,36 @@
     <string name="tflite">tflite</string>
     <string name="nnapi">NNAPI</string>
     <string name="threads">Threads:</string>
+
+
+    <string name="emailid">Email ID</string>
+    <string name="password">Password</string>
+    <string name="login">LOGIN</string>
+    <string name="title_activity_scanner">Barcode and QR Scanner</string>
+    <string name="scan_bar_code">Scan Bar Code</string>
+    <string name="validate">Validate</string>
+    <string name="image_description">Image Resource</string>
+    <string name="capture_bios">Capture BIOS</string>
+    <string name="capture_band">Capture ESD Band</string>
+    <string name="cv1title">Is this the right Barcode Unit ?</string>
+    <string name="cv1body">Focus the scanner on the barcode located under the laptop</string>
+    <string name="cv2title">Does the Service Tag match on the BIOS Screen ?</string>
+    <string name="cv2body">Capture the Service Tag number from the BIOS/ePSA Diagnostics screen</string>
+    <string name="cv3title">Am I wearing the ESD Band correctly</string>
+    <string name="cv3body">Focus on your hand after wearing the ESD Band</string>
+    <string name="done">Done</string>
+    <string name="override">OVERRIDE</string>
+    <string name="verify">VERIFY</string>
+    <string name="verified">VERIFIED</string>
+
+    <string name="title_activity_final_page">FinalPageActivity</string>
+    <string name="title_check_list">BASIC CHECKLIST</string>
+    <string name="check_list_complete">CHECKLIST COMPLETED</string>
+    <string name="exit">EXIT</string>
+    <string name="thank_you">THANK\nYOU</string>
+    <string name="prog1">1/3</string>
+    <string name="prog2">2/3</string>
+    <string name="prog3">3/3</string>
 
     <string name="model">Model:</string>
     <string-array name="models">
